# superdiff

./: README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.1  output.2  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  globals.h  superdiff.c  superdiff.h  util.c  util.h
